# razzle

./: .gitignore  README.md  TASKS.md  docker-compose.yml  start-razzle-engine.sh  start-razzle-webapp.sh
engine/: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  test_mcts_endgames.py  test_mcts_no_network.py  test_positions.txt  training-status.sh
engine/cli/: play.py
engine/docs/: ENGINE_API.md  GPU_OPTIMIZATION_NOTES.md  NEURAL_NETWORK.md  RULES.md  TRAINING.md  TRAINING_METRICS.md  TRAINING_PLAN.md  TRAINING_PLAN_2025_01.md
engine/razzle/: __init__.py
engine/razzle/ai/: __init__.py  evaluator.py  mcts.py  network.py  time_manager.py
engine/razzle/core/: __init__.py  bitboard.py  moves.py  notation.py  state.py
engine/razzle/training/: __init__.py  api_client.py  logger.py  metrics.py  replay_buffer.py  selfplay.py  trainer.py  (+1 more)
engine/scripts/: analyze_policy_accuracy.py  analyze_training.py  benchmark.py  benchmark_gpus.py  collector.py  diagnose_policy.py  launch_training.py  measure_search_depth.py  model_arena.py  monitor_training.py  plot_training.py  test_pipeline.py  train_cloud.py  train_distributed.py  train_local.py  train_parallel.py  trainer.py  training_status.py  vastai_cleanup.py  visualize_training.py  worker_selfplay.py
engine/server/: __init__.py  main.py  persistence.py
engine/tests/: __init__.py  test_bitboard.py  test_evaluator.py  test_game.py  test_mcts.py  test_moves_extended.py  test_notation.py  test_player_perspective.py  test_server.py  test_server_auth.py  test_server_games.py  test_terminal.py  test_training_api.py
(+43 files in other folders)
